3. oct (ws)
      - create full measure rests on midi import
2. oct (ws)
      - added libpoppler to build system
      - remove libgsl dependency from omr build
      (lv)
      - #5637 support reading bww files: fix beam start
1. oct (ws)
      - fix #7345: opening bach-bc2 demo causes crash
      - TextStyle and Style are now implicitly shared objects to reduce
        memory resources and speedup some operations
      - move TextStyle to Style
29.sep (ws)
      - fix #7303
      - another attempt to fix #7227
      - make it easier to parallel install musescore-0.9.6.x and trunk:
         - changed install path from mscore-0.9 to mscore-1.0
         - changed "organization name" from MusE to MuseScore
         - changed "organization domain" from muse.org to musescore.org
         - changed "application name" from MuseScore to MuseScore1; this changes the
           shared files path
         - mscore-0.9.6 can be started parallel to trunk version to make
           compatibility testing easier
28.sep (ws)
      - linked parts: link ties
      - fixed #7311: dragging tied notes and removing tie gives weird result
      - fixed #7295: margin between clef and first not too narrow
      - fixed #7174: linked parts are not closed when the main score is closed
27.sep (ws)
      - fixed #7294: chord text of staff != 1 shown in wrong position
      - fixed #7292: handling of backward compatibility of mscz files
      - moved Lyrics from Segment to ChordRest. This allows for lyrics on
        grace notes (#6577)
26.sep (ws)
      - fix clef changes
25.sep (ws)
      - implemented #6925: Make "reset stretch" work on the selected measure only
      - fixed #7225: [trunk] SIGABORT when loading a score with parenthesized accidental(s)
      - fixed #7227: [trunk] Wrong X coord in symbol placement
      - updated accidental handling
     (db)
      - fix #6649: Transposition when creating a score from a template
24.sep (ws)